--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,13 @@
+#======================================================================
+#	Cycle - calendar for women
+#	Distributed under GNU General Public License
+# Original Author: Oleg S. Gints (altgo@users.sourceforge.net)
+# Adopted by: Konstantin L. Metlov (metlov@donfti.ru, metlov@fti.dn.ua)
+# Other contributors are listed alongside their changes
+# Home page: https://github.com/metlov/cycle
+#======================================================================
+0.3.2 (unreleased)
+
 #====================================================
 #	Cycle - calendar for women
 #	Distributed under GNU Public License
