--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
 # Home page: https://github.com/metlov/cycle
 #======================================================================
 0.3.2 (unreleased)
+    - removed outdated Readme.Debian
 
 #====================================================
 #	Cycle - calendar for women
