converted README files to Markdown
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@
 #======================================================================
 0.3.2 (unreleased)
     - removed outdated Readme.Debian
+    - converted README files to Markdown
 
 #====================================================
 #	Cycle - calendar for women
