Line breaks in dialog message  (with Miriam Ruiz)
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,7 +13,7 @@
 
     from Ana Guerrero López <ana@debian.org>:
     - Fix diaglogs
-
+    - Line breaks in dialog message  (with Miriam Ruiz)
 
 #====================================================
 #	Cycle - calendar for women
