Enhance dialog strings
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,6 +14,7 @@
     from Ana Guerrero López <ana@debian.org>:
     - Fix diaglogs
     - Line breaks in dialog message  (with Miriam Ruiz)
+    - Enhance dialog strings
 
 #====================================================
 #	Cycle - calendar for women
