Fix calendar string format
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,7 @@
     - Fix diaglogs
     - Line breaks in dialog message  (with Miriam Ruiz)
     - Enhance dialog strings
+    - Fix calendar string format
 
 #====================================================
 #	Cycle - calendar for women
