--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,7 @@
     - Line breaks in dialog message  (with Miriam Ruiz)
     - Enhance dialog strings
     - Fix calendar string format
+    - Report as ical
 
 #====================================================
 #	Cycle - calendar for women
