--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
     - Enhance dialog strings
     - Fix calendar string format
     - Report as ical
+    - Export to ical
 
 #====================================================
 #	Cycle - calendar for women
