Use hashlib when saving / loading
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,9 @@
     - Report as ical
     - Export to ical
 
+    from  Miriam Ruiz <little_miry@yahoo.es>:
+    - Use hashlib when saving / loading
+
 #====================================================
 #	Cycle - calendar for women
 #	Distributed under GNU Public License
