--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,6 +30,7 @@
     from Konstantin L. Metlov <metlov@donfti.ru>
     - ported to Python 3 using the 2to3 script
     - reformatted the sources using autopep8
+    - ported to wxGTK 4
 
 #====================================================
 #	Cycle - calendar for women
