readded forgotten export.png bitmap from Ana Guerrero López
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@
     - removed outdated Readme.Debian
     - converted README files to Markdown
     - fix heading syntax in README.ru.md
+    - readded forgotten export.png bitmap from Ana Guerrero López
 
     from Ana Guerrero López <ana@debian.org>:
     - Fix diaglogs
