--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
 # Home page: https://github.com/metlov/cycle
 #======================================================================
 0.3.3 (unreleased)
+    - fixed the Note dialog
 0.3.2 (13.10.2022)
     - removed outdated Readme.Debian
     - converted README files to Markdown
