more integer division fixes
Signed-off-by: Konstantin L. Metlov <metlov@fti.dn.ua>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,7 @@
     - fixed the Note dialog
     - merged the actions of LMB and RMB on calendar to make it easier
       to operate on it from touchscreen devices
+    - fixed some more integer divisions
 0.3.2 (13.10.2022)
     - removed outdated Readme.Debian
     - converted README files to Markdown
